--- a/NQRackers/NQRackers.csproj
+++ b/NQRackers/NQRackers.csproj
@@ -1,19 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-
-  <PropertyGroup>
+    <Version>0.1</Version>
     <Authors>zkSNACKs Ltd</Authors>
     <Company>zkSNACKs Ltd</Company>
-    <Copyright>MIT</Copyright>
     <PackageProjectUrl>https://github.com/zkSNACKs/NQRackers/</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/zkSNACKs/NQRackers/blob/master/LICENSE.md</PackageLicenseUrl>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/zkSNACKs/NQRackers/</RepositoryUrl>
-  </PropertyGroup>
 
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <LangVersion>latest</LangVersion>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+  <ItemGroup>
+    <None Include="../LICENSE" Pack="true" PackagePath=""/>
+  </ItemGroup>
 </Project>
